testsuite/poke.pkl/struct-types-diag-13.pk
/* { dg-do compile } */

type Bar =
  struct
  {
    int i;
    any[][3] j; /* { dg-error "invalid type" } */
    fun ja = void: {}
  };
